--- a/my_loading_spinner.css
+++ b/my_loading_spinner.css
@@ -7,8 +7,8 @@ align-items:center
 }
 .sk-circle {
   margin: 100px auto;
-  width: 100px;
-  height: 100px;
+  width: 100px !important;
+  height: 100px !important;
   position: relative;
 }
 .sk-circle .sk-child {
